[preamble] New chapters start at a new page. This might be broken for the non-fantasy build.

--- a/latex/elementaris-fantasy.tex
+++ b/latex/elementaris-fantasy.tex
@@ -1,4 +1,4 @@
-\documentclass[10pt,a4paper,twoside,openany]{article}
+\documentclass[10pt,a4paper,twoside,openany]{book}
 
 % Used packages, global commands, styles.
 \input{preamble}
@@ -7,7 +7,7 @@
 \input{fantasy/titlepage.tex}
 
 % First chapter - rules, that are common to all games.
-\input{rules}
+\input{rules/rules}
 
 % Setting-specific tables. What was a luxury once is now but a commodity.
 \input{fantasy/magic}
