--- a/latex/fantasy/items.tex
+++ b/latex/fantasy/items.tex
@@ -1,12 +1,12 @@
-\section{Предмети}
-\subsection{Валути}
+\chapter{Предмети}
+\section{Валути}
 Абстрактна валута: много евтиn, евтин, среден, скъп, много скъп; няма преобразувания.  \\
 Луседом Терея: 100 имперски крони = 10 имперски рояла = 1 имперски соверен             \\
 Каланор: 100 кралски крони = 10 кралси рояла = 1 кралски соверен                       \\
 Сзал Тлея: 13 тъмни монети = 1 черна монета; 900 черни монети = 1 дълбока монета       \\
 Креол: 1900 монети за храна = 1 монета за оръжие; 69 монети за оръжие = 1 монета за дом
 
-\subsection{Надници}
+\section{Надници}
 Приходи за година. Стойностите в скобите не са ликвидни.
 крепостен селянин
 страж
@@ -83,7 +83,7 @@ Some other figures: There will be one noble household per 200 population, one la
 % This is a fine book by amateur historians, which includes some fascinating descriptions of medieval city life and layout.
 % <quoted>
 
-\subsection{Сгради}
+\section{Сгради}
 \rowcolors{1}{white}{lightgray}
 \begin{tabular}{p{3cm} | p{3cm} | p{3cm} | p{3cm} | p{3cm}}
 мн. евтин & евтин                                   & среден                   & скъп                           & мн. скъп  \\
@@ -131,9 +131,9 @@ Some other figures: There will be one noble household per 200 population, one la
 
 \weapon{viking_shield}{Щит}{5-12}{близък (0.8/2м)}{ниски}{-}{3.5кг}{много евтин}
 
-\subsection{Брони}
-\subsubsection{Глава и шия}
-%\subsubsubsection{Шлемове}
+\section{Брони}
+\subsection{Глава и шия}
+\subsubsection{Шлемове}
 \armor{leather_helmet}{Кожен шлем}{3}{2}{-}{1кг}{много евтин}
 
 \armor{coif}{Халчеста качулка}{5}{4}{-}{3кг}{евтин}
@@ -144,18 +144,16 @@ Some other figures: There will be one noble household per 200 population, one la
 \armor{great_helm}{Пълен шлем}{5}{6}{-1 Ловкост}{3кг}{евтин}
 \armor{armet}{Армет}{7}{7}{-1 Ловкост}{4кг}{среден}
 
+\subsubsection{Аксесоари}
 \armor{helmet_padding}{Подплата за шлем}{4}{2}{-}{0.5кг}{много евтин}
 \armor{aventail}{Було}{2}{4}{-}{1кг}{много евтин}
 \armor{bevor}{Яка}{2}{7}{}{1кг}{евтин}
 
-\subsubsection{}
-\subsubsection{}
-\subsubsection{}
-\subsubsection{}
-
+\subsection{Торс}
+\subsubsection{Ризници и нагръдници}
 \armor{gambeson}{Гамбезон}{торс 7, ръце 2, крака 2}{2}{-}{4кг}{много евтин}
 
-\armor{haubergeon}{Хаубергенеон}{торс 5, ръце 2}{4}{-}{8кг}{евтин}
+\armor{haubergeon}{Хаубергеон}{торс 5, ръце 2}{4}{-}{8кг}{евтин}
 \armor{hauberk}{Хауберк}{торс 7, ръце 2, крака 2}{4}{-}{10кг}{среден}
 
 \armor{mail_with_plates}{Хауберк с плочки}{торс 7, ръце 2, крака 2}{5}{-}{12кг}{среден}
@@ -166,6 +164,7 @@ Some other figures: There will be one noble household per 200 population, one la
 \armor{breastplate}{Нагръдник}{3}{7}{-}{4кг}{евтин}
 \armor{cuirasse}{Кираса}{4}{7}{-}{8кг}{среден}
 
+\subsubsection{Аксесоари}
 \armor{culet}{Кулет}{торс 1, крака 1}{5}{-}{2кг}{евтин}
 \armor{faulds}{Фаулд}{2}{5}{-}{2кг}{евтин}
 \armor{spaulder}{Спaлдери}{2}{5}{-}{2кг}{евтин}
@@ -181,26 +180,27 @@ Some other figures: There will be one noble household per 200 population, one la
 \armor{laminar_vambrace}{Горен канон от пластини}{2}{5}{-}{1кг}{евтин}
 \armor{plate_vambrace}{Кован горен канон}{2}{7}{-}{3кг}{евтин}
 
+\subsection{Комплекти}
 \armor{full_plate_hands}{Пълна броня}{глава 7, торс 7, ръце 7, крака 7}{7}{-1 Ловкост}{20кг}{скъп}
 \armor{full_plate}{Пълна броня}{глава 7, торс 7, ръце 7, крака 7}{7}{-1 Ловкост}{20кг}{скъп}
 
 
 
 
-\textbf{Здравина}:
-\begin{itemize}[topsep=-0cm, partopsep=0cm, parsep=0cm, itemsep=0cm]
-\item{Кожена броня(слоеве памук/хартия/коприна/мека кожа, със зашити плочи варена кожа/хитинова коруба на негъвкавите части) 2}
-\item{Халчеста броня, подплатена с гамбезон 4}
-\item{Ламенарна броня, подплатена с гамбезон 6}
-\item{Лята броня, подплатена с гамбезон(средновековен дизайн - субоптимална форма, субоптимална стомана, примитивно закаляване, подвижност в ставите се осигурява от халчести участъци) 8}
-\item{Лята броня, подплатена с гамбезон(ренесансов дизайн - скосени повърхности, качествена стомана (high toughness core),  интелигентно закаляване на повърхностния слой(hardened shell), сложни механични стави) 10}
-\\
-\\
-Масата на конпонент клони към една десета от произведенито на покритието и здравината му за средно качество изработка.
-\end{itemize}
+%\textbf{Здравина}:
+%\begin{itemize}[topsep=-0cm, partopsep=0cm, parsep=0cm, itemsep=0cm]
+%\item{Кожена броня(слоеве памук/хартия/коприна/мека кожа, със зашити плочи варена кожа/хитинова коруба на негъвкавите части) 2}
+%\item{Халчеста броня, подплатена с гамбезон 4}
+%\item{Ламенарна броня, подплатена с гамбезон 6}
+%\item{Лята броня, подплатена с гамбезон(средновековен дизайн - субоптимална форма, субоптимална стомана, примитивно закаляване, подвижност в ставите се осигурява от халчести участъци) 8}
+%\item{Лята броня, подплатена с гамбезон(ренесансов дизайн - скосени повърхности, качествена стомана (high toughness core),  интелигентно закаляване на повърхностния слой(hardened shell), сложни механични стави) 10}
+%\\
+%\\
+%Масата на конпонент клони към една десета от произведенито на покритието и здравината му за средно качество изработка.
+%\end{itemize}
 
-\subsection{Други}
-комплект отрови - действие за някокко дена \\
-алхимични принадлежности - кутия, хаван, стъкленици, лампа и т.н., 2кг, сренед  \\
-стрела, клиновидна  \\
-стрела, широка  \\
+%\section{Други}
+%комплект отрови - действие за някокко дена \\
+%алхимични принадлежности - кутия, хаван, стъкленици, лампа и т.н., 2кг, сренед  \\
+%стрела, клиновидна  \\
+%стрела, широка  \\
