--- a/latex/fantasy/magic.tex
+++ b/latex/fantasy/magic.tex
@@ -1,4 +1,4 @@
-\section{Ползване на магия}
+\chapter{Магия}
 Хвърля се Умение + Ум / 2 срещу зададена от Разказвача трудност. При
 неуспех, разликата се прилага като травма.
 
@@ -10,7 +10,7 @@
 За всяко настоящо поддържано заклинание от същата школа магия, умението се
 намаля с 5 точки временно.
 
-\subsection{Заклинания}
+\section{Заклинания}
 
 \textbf{Жизнена енергия / Некромантия / Отвъд}
 \begin{itemize*}
