--- a/latex/fantasy/races.tex
+++ b/latex/fantasy/races.tex
@@ -1,4 +1,4 @@
-\section{Раси}
+\chapter{Раси}
 Метаправила:  \\
 Качествата струват съответно по 1 и -1 точка за положителни и отрицателни качества.  \\
 Правото на две расови умения на 5, без да е нужно да покриват изисквания, без точките да се плащат от (5 * Ум), струва една точка.  \\
