--- a/latex/rules/character.tex
+++ b/latex/rules/character.tex
@@ -1,13 +1,13 @@
 % This file concers character charuin and eviutuion. It;s aim is to be consice anad genre-independent.
 
-\section{Игрови персонаж}
+\chapter{Игрови персонаж}
 
-\subsection{Точки за герой}
+\section{Точки за герой}
 С 'точки за герой' се купуват раса, показатели и качества.
 Началните точки се определят според сценария - 20 за обикновен човек, 30 за 'герой', 50 за митично същество, 100 за езически бог.
 
 
-\subsection{Раса}
+\section{Раса}
 Тук думата се ползва в значение 'биологичен вид'.
 Нека разгледаме човеците за пример.
 \begin{multicols}{2}
@@ -20,7 +20,7 @@
 \end{multicols}
 
 
-\subsection{Показатели}
+\section{Показатели}
 Наричани още primary attributes, защото останалите характеристики се определят от тях.
 Ето някои примери:
 \begin{itemize*}
@@ -31,7 +31,7 @@
 \end{itemize*}
 
 
-\subsection{Умения}
+\section{Умения}
 Точките за умения са \textit{(Ум * 5)} и се увеличават или намаляват ако Ум се промени.
 Всяко умение е базирано върху някой показател и не може да бъде повишавано на повече точки от него.
 \\
@@ -40,7 +40,7 @@
 Това са само примери и не бива да ограничават въображението!
 
 
-\subsection{Качества}
+\section{Качества}
 Шапка за всичко останало.
 Искаш да започнеш с много пари? Качество 'богат'.
 Искаш да си извадиш бира от хлдилника без да ставаш? Качество 'телекинеза'.
@@ -56,7 +56,7 @@
 Отново глава Таблици дава някои идеи.
 
 
-\subsection{Носене}
+\section{Носене}
 \rowcolors{1}{white}{lightgray}
 \begin{tabular}{l | l | l | l }
 Максимален товар, кг & Придвижване, м/ход       & Модификация  \\
@@ -68,11 +68,11 @@
 Очевидно хвърлянето на раницата преди битка е добра идея, както и язденето на дълги разстояния.
 
 
-\subsection{Предмети}
+\section{Предмети}
 Героите започват с един среден, три евтини и колкото си пожелаят много евтини предмети.
 Прогресията е много скъп(замък) - скъп(имение) - среден(двуръчен меч) - евтин(меч) - много евтин(щит, брадва).
 
-\subsection{Биография}
+\section{Биография}
 Ето някои идеи за историята на персонажа:
 \begin{itemize*}
 \item{Какво искаш от утрешния ден, от идните години, от живота?}
