--- a/latex/rules/combat.tex
+++ b/latex/rules/combat.tex
@@ -1,6 +1,6 @@
-\section{Бойна система}
+\chapter{Бойна система}
 
-\subsection{Детайлност}
+\section{Детайлност}
 В зависимост от сюжетните нужди, една схватка може да бъде описана в еднинствено изречение или на десетки страници.
 За това настоящата глава е организирана както следва.
 Дефинирани са голям брой правила, всяко с уникално име.
@@ -68,25 +68,25 @@
 \end{abstractiontable}
 
 
-\subsection{Списък с правила}
-\subsubsection{Абсорбация}
+\section{Списък с правила}
+\subsection{Абсорбация}
 Свойството на броня да абсорбира част от сериозността на удар.
 
 
-\subsubsection{Автоматична стрелба}
+\subsection{Автоматична стрелба}
 Автоматичните оръжия са способни да произведат повече от един изстрел за ход.
 Хвърлянето за атака е едно и броят изстрели се заявява предварително.
 Всеки изстрел след първия има <откат> точки по-малко атака, натрупвайки се.
 
 
-\subsubsection{Байнд}
+\subsection{Байнд}
 Наместо атакуване с ръкопашно оръжие, войн може да опита да постигне доминантна позиция в байнд.
 Това изисква двамата войни да са на дистанция, в която поне единият може да удари другия.
 Следващия ход нападателят има +5 на боравене.
 
 
 \begin{multicols}{2}
-\subsubsection{Боравене}
+\subsection{Боравене}
 Число, описващо колко вероятно е ръкопашна или далечна атака да достигне целта си.
 Равно е на умението с използвното оръжие.
 \\
@@ -98,16 +98,15 @@
 Ако нападението е поне равно на отбраната, удар е пласиран, но може да бъде спрян от броня.
 
 
-\subsubsection{Две оръжия}
+\subsection{Две оръжия}
 Едното оръжие се ползва за да нанесат щети на врага, нека наречем него първо.
 Второто оръжие може да се ползва за създаване на откриване (което добавя половината боравене в това оръжие към боравенето с основното оръжие) или пък независимо, за пласиране на стопиращи удари (в който случай се ползва независимо, но с наказание -5 на атака).
 Ако се атакува само с едното оръжие няма наказания, разбира се.
 Щитовете не търпят -5 при пазене.
 \includegraphics[height=0.8\textheight]{../images/naginata}~
-\end{multicols}
 
 
-\subsubsection{Дистанция}
+\subsection{Дистанция}
 \begin{enumerate}
 \item{директна (борба)}
 \item{близка (нож, невъоръжен, къс меч)}
@@ -129,12 +128,13 @@
 Жоро може да избере близка, средна, дълга, отдалечена или да побегне.}
 
 
-\subsubsection{Джаб}
+\subsection{Джаб}
 Това е бърза ръкопашна атака, която избягва откриване или дисбалансиране на себе си.
 Ползва (боравене+5), но причинява (Щ/2).
+\end{multicols}
 
 
-\subsubsection{Езда, Шофиране}
+\subsection{Езда, Шофиране}
 Ползване на умения от гърба на кон е ограничено до нивото на езда.
 Например при боравене с копие 6 и езда 4, нападението е 4 + *d.
 \\
@@ -150,20 +150,20 @@
 Друго приложение на умела езда е бързо придвижване през труден терен или по улици със завои.
 
 
-\subsubsection{ЖТ}
+\subsection{ЖТ}
 Жизнените точки са равни на Сила.
 Ако бъдат бъдат редуцирани до или под 0, съществува опасност от безсъзнание или смърт.
 При всяка рана, която резултира в ЖТ <=0, се хвърля зар.
 5 -> смърт, 3 -> безсъзнание и смъртоносна рана, 1 -> безсъзнание
 
 
-\subsubsection{Необходима сила}
+\subsection{Необходима сила}
 Това е обсегът на Сила на героят, в който оръжието е ефективно.
 Ако персонажът има по-малко от минималната сила, разликата става наказание върху боравенето с това оръжие.
 От друга страна, Сила, по-висока от максималната, не допринася за по-високи щети.
 
 
-\subsubsection{Изстрел}
+\subsection{Изстрел}
 Тук спадат всички далечни оръжия без автоматичен режим на стрелба като лък, арбалет, пистолет и дори франциска или просто камък.
 \\
 \\
@@ -177,44 +177,44 @@
 \end{tabular}
 
 
-\subsubsection{Лесни оръжия}
+\subsection{Лесни оръжия}
 Някои оръжия, като арбалетът или повечето огнестрелни оръжия, могат да бъдат ползвани след само ден тренировки.
 С тях може да бъде нападано ползвайки Ловкост, наместо боравене.
 Твоа важи само за нападение - боравене е нужно за Прицелена стрелба, ремонтиране, ползване ранен и така нататък други действия.
 
 
-\subsubsection{Многобой}
+\subsection{Многобой}
 Това е ситуация, в която един войн е в ръкопашен бой с няколко врага.
 Тогава той има право само на една отбрана на ход като париране или отбягване, и има трудност да бъде уцелен 0 срещу всички останали нападение.
 Алтернативно, той може да отдели някои точки от основната си отбрана за последващи такива.
 Примерно мечоносец с боравене 8 може да реши да се предпази от двамата си опоненти с (4 + d*), наместо от първия с (8 + d*) и от втория с (d*).
 
 
-\subsubsection{Нападение на строй}
+\subsection{Нападение на строй}
 нападение = (боравене + средни Щ (+ 5 за конник)) / 2
 
 
-\subsubsection{Обсег}
+\subsection{Обсег}
 За стрелящи оръжия.
 Най-голямото разстояние, на което стрелецът може да се прицели с лекота.
 През всеки инкремент метра, атаките търпят по -5 наказание.
 
 
-\subsubsection{Обстрел на строй}
+\subsection{Обстрел на строй}
 обстрел = (боравене + средни Щ (+5 за автоматични оръжия)) / 2
 
 
-\subsubsection{Обща абсорбация}
+\subsection{Обща абсорбация}
 общо покритие = (покритие глава + покритие торс + покритие ръце + покритие крака) / 4
 \\
 обща абсорбация = (аб + общо покритие) / 2
 
 
-\subsubsection{Отбрана на строй}
+\subsection{Отбрана на строй}
 отбрана = (боравене + обща абсорбация)
 
 
-\subsubsection{Покритие(на броня)}
+\subsection{Покритие(на броня)}
 Парчета броня могат да бъдат носени заедно или едно под друго.
 \begin{itemize}
 \item{на главата може да бъде носен шлем върху бронирана качулка}
@@ -241,14 +241,18 @@
 \anexample{Ръкавици с покритие 4 и налакътници с покритие 3 представляват една броня за ръцете с покритие 7 и абсорбация средно аритметично от двете.}
 
 
-\subsubsection{Прицелване}
+\begin{multicols}{2}
+\subsection{Прицелване}
 Това действие е възможно, когато се ползва изцяло стрелящо оръжие като арбалет или пушка, но не и лък или ръчна граната.
 То може да бъде извъшено толкова пъти, колкото е (боравене) със съответното оръжие.
 Всеки ход, прекаран в прицелване, добавя +1 модификация.
 След това целта може да бъде следена, запазвайки модификацията, докато нещо съществено се промени: влезе в автомобил, легне, затича се.
 
 
-\subsubsection{Прикриване}
+\includegraphics[width=0.6\textwidth]{../images/siege}~
+
+
+\subsection{Прикриване}
 Прикритие от ръкопашни атаки, като зад тезгях или зад ъгъла, дава (боравене+5) за целите на отбрана и на двамата опоненти.
 \\
 \\
@@ -256,14 +260,15 @@
 Следната модификация се вади от боравенето на враг, стрелящ по прикрития персонаж.
 \\
 \rowcolors{1}{white}{lightgray}
-\begin{tabular}{l | l | p{10cm}}
+\begin{tabular}{p{2cm} | p{1cm} | p{5cm}}
 Ситуация        & Модификация & Бележки \\
 полу-прикритие  & -5          & поне половината тяло е скрито, примерно зад крепостна стена или заложник \\
 пълно прикритие & -10         & примерно зад ъгъла; атаки търпят -5 наказание                            \\
 \end{tabular}
+\end{multicols}
 
  
-\subsubsection{Ранa}
+\subsection{Ранa}
 След като нападение премине през бронята, делим оставащите точки щети на Сила на ранения:
 \\
 \\
@@ -291,7 +296,7 @@
 Симптомите са незабавно безсъзнание докато причинителят не бъде отстранен.
 
 
-\subsubsection{Стрелба по крайник}
+\subsection{Стрелба по крайник}
 \rowcolors{1}{white}{lightgray}
 \begin{tabular}{l | l | l | l }
 глава & модификация -5  \\
@@ -301,7 +306,7 @@
 \end{tabular}
 
 
-\subsubsection{Свойства на оръжие}
+\subsection{Свойства на оръжие}
 \begin{itemize}
 \item{\textit{повратливост} - покрива всички по-близки дистанции от максимлната}
 \item{\textit{бронебойност} - пренебрегва половината абсорбацията на целта}
@@ -312,7 +317,7 @@
 \end{itemize}
 
 
-\subsubsection{Удар по крайник}
+\subsection{Удар по крайник}
 \rowcolors{1}{white}{lightgray}
 \begin{tabular}{l | l | l | l }
 глава & -  \\
@@ -322,7 +327,7 @@
 \end{tabular}
 
 
-\subsubsection{Типове щети}
+\subsection{Типове щети}
 Мушакщи атаки (Щм) са бързи, но оставят нападателя открит за контраатака(боравене-5 следващия ход).
 Причиняват високa смъртност(Щ*2).
 \\
@@ -336,7 +341,7 @@
 Същото важи и в обратната ситуация(боравене-5 за париране на остро оръжие).
 
 
-\subsubsection{Финт}
+\subsection{Финт}
 Финтът е хазарт.
 Сравнява се (боравене с вражеското оръжие + d*) с/у (боравене на врага с нашето оръжие).
 Ако е поне равно, се получава (боравене+5) до началото на следващия ход.
@@ -344,7 +349,7 @@
 Иначе се получава (боравене-5).
 
 
-\subsubsection{Щети}
+\subsection{Щети}
 Щети от попадение с ръкопано оръжие зависят от Сила на ползвателя му според следната таблица.
 Конктетното оръжие може да има модификации върху тази стойност.
 \\
@@ -389,71 +394,65 @@
 %\end{wraptable}
 
 
-\begin{center}
-\includegraphics[width=0.75\textwidth]{../images/siege}~
-\\[1cm]
-\end{center}
+%\subsection{Масови сражения}
+%Групи от съюзници могат да бъдат събирани в "строй".
+%Не е нужно групата да е хомогенна, но трябва да имат обща цел.
 
-
-\subsubsection{Масови сражения}
-Групи от съюзници могат да бъдат събирани в "строй".
-Не е нужно групата да е хомогенна, но трябва да имат обща цел.
-
-\subsubsection{Характеристики на строй}
-\begin{itemize}
+%\subsection{Характеристики на строй}
+%\begin{itemize}
 % Структурни
-\item{Лице - брой бойци с достъп до врага.}
-\item{Гъстота - от 1:1 (стена от щитове) до 1:5 (цвайхендери)}
-\item{Връхлитане - х1.5 за пешаци, х3 за конница}
-\item{Придвижване - равно на придвижването на най-бавният.}
+%\item{Лице - брой бойци с достъп до врага.}
+%\item{Гъстота - от 1:1 (стена от щитове) до 1:5 (цвайхендери)}
+%\item{Връхлитане - х1.5 за пешаци, х3 за конница}
+%\item{Придвижване - равно на придвижването на най-бавният.}
 
 % Състояние
-\item{Брой живи - бойци в добро здраве.}
-\item{Брой ранени - небоеспособни, в ръцете на лекарите след битка.}
-\item{Морал - равен на Дисциплина(У), спадне ли до 0, строят се превръща в "тълпа".}
+%\item{Брой живи - бойци в добро здраве.}
+%\item{Брой ранени - небоеспособни, в ръцете на лекарите след битка.}
+%\item{Морал - равен на Дисциплина(У), спадне ли до 0, строят се превръща в "тълпа".}
 
 % Компетентност и екипировка
-\item{Ръкопашен бой - Сила + най-високото боравене с налично ръкопашно оръжие.}
-\item{Стрелба - Сила + най-високото боравене с налично далечно оръжие}
-\item{Броня - Сила + (1/10)сума(пазене * здравина), без щитове}
-\end{itemize}
-\subsubsection{Правила}
-Ръкопашен бой + д6* с/у броня. Ако нападащият строй спечели, лицето на строят му се нанася 1/2 като убити и 1/2 като ранени върху противника. Разликата в хвърлянето се нанася върху моралът на противника / противника губи 1 точка морал (\textit{кое е по-добро?}).
+%\item{Ръкопашен бой - Сила + най-високото боравене с налично ръкопашно оръжие.}
+%\item{Стрелба - Сила + най-високото боравене с налично далечно оръжие}
+%\item{Броня - Сила + (1/10)сума(пазене * здравина), без щитове}
+%\end{itemize}
+%\subsection{Правила}
+%Ръкопашен бой + д6* с/у броня. Ако нападащият строй спечели, лицето на строят му се нанася 1/2 като убити и 1/2 като ранени върху противника. Разликата в хвърлянето се нанася върху моралът на противника / противника губи 1 точка морал (\textit{кое е по-добро?}).
 
-Директна стрелба (под 1 инкремент на оръжието) следва правилата за ръкопашен бой. Стрелба до максималното разстояние на хвърляне на оръжието е на половина щета.
+%Директна стрелба (под 1 инкремент на оръжието) следва правилата за ръкопашен бой. Стрелба до максималното разстояние на хвърляне на оръжието е на половина щета.
 
-Лице и Дълбочина. Един строй може да бъде нападнат едновременно от най-много толкова строеве, сумата от чиито лица е колкото два пъти лицето на  нападнатите.
+%Лице и Дълбочина. Един строй може да бъде нападнат едновременно от най-много толкова строеве, сумата от чиито лица е колкото два пъти лицето на  нападнатите.
 
-Ако броят живи спадне под числото лице, строят се разпада (превръща се в тълпа).
+%Ако броят живи спадне под числото лице, строят се разпада (превръща се в тълпа).
 
-Ранените бойци са боеспособни, но намалят придвижването на стоя на половина. Лекуването им отнема половин месец.
+%Ранените бойци са боеспособни, но намалят придвижването на стоя на половина. Лекуването им отнема половин месец.
 
-Морал. При виждане на разбиване на приятелски сторй, или ако бягащ разбит строй премине през позициите на друг строй, морал се намаля с 1.
+%Морал. При виждане на разбиване на приятелски сторй, или ако бягащ разбит строй премине през позициите на друг строй, морал се намаля с 1.
 
-При морал 0, строят се разбива и се превръща в тълпа.
+%При морал 0, строят се разбива и се превръща в тълпа.
 
-Войници не в строй (а в тълпа) търпят наказание на всичко от -5.
+%Войници не в строй (а в тълпа) търпят наказание на всичко от -5.
 
-При виждане на поне двойно числено превъзхождащ противник, всеки строй губи 1 морал.
+%При виждане на поне двойно числено превъзхождащ противник, всеки строй губи 1 морал.
 
-При виждане на подготвящ се да връхлети двойно по-многоброен или много по-добре екипиран строй, строят губи 1 морал.
+%При виждане на подготвящ се да връхлети двойно по-многоброен или много по-добре екипиран строй, строят губи 1 морал.
 
-Моралът се възстановява извън битка с 1 точка на минута.
+%Моралът се възстановява извън битка с 1 точка на минута.
 
 
 
-%\subsubsection{здрави/ранени}
+%\subsection{здрави/ранени}
 % Брой боеспособни войници с/у брой небоеспособни
 % Ранените забавят армията, и някои от тях никога не се възстановяват
 
 
-%\subsubsection{Придвижване на армия}
+%\subsection{Придвижване на армия}
 % фактори - статистики на хората, брой коне, размер на обоза
 
 
 
 %\\
-%\subsubsection{Напдение}
+%\subsection{Напдение}
 %TODO: reclim notes from Sofia.
 %\\
 
@@ -462,6 +461,6 @@
 % TODO: base upon notes from Sofia
 
 
-%\subsubsection{Навесна стрелба}
+%\subsection{Навесна стрелба}
 
 
