--- a/latex/fantasy/skills.tex
+++ b/latex/fantasy/skills.tex
@@ -1,8 +1,7 @@
-
-\section{Умения}
+\chapter{Умения}
 Означените със звездичка умения са събирателни понятия.
 Например може да се избере \textit{елфически} език или оръжие \textit{брадва} или наука \textit{алхимия}.
-\subsection{Общуване}
+\section{Общуване}
 Лъжене (Харизма)                  \\
 Сплашване (Харизма)               \\
 Изтезаване/Разпитване (Харизма)   \\
@@ -10,27 +9,27 @@
 Четене по устните (Харизма)       \\
 Молене (Харизма)                  \\
 
-\subsection{Академични}
+\section{Академични}
 Език* (Ум)                        \\
 Наука* (Ум)                       \\
 Тактика (Ум)                      \\
 
-\subsection{Схватки}
+\section{Схватки}
 Оръжие* (Ловкост)                 \\
 Военна машина* (Ум)               \\
 
-\subsection{Придвижване}
+\section{Придвижване}
 Плуване (Сила)                    \\
 Кaтерене (Сила)                   \\
 
-\subsection{Занаяти}
+\section{Занаяти}
 Билкарсто (Ум)                    \\
 Ковачество(С)                     \\
 Грънчарство(Л)                    \\
 Изработка на лъкове(Л)            \\
 Тъкане, шиене и бродиране(Л)      \\
 
-\subsection{Епични провали}
+\section{Епични провали}
 Ако при мятане на д6* се падне -5 или +6, се мята отново.
 Ако случайно се падне същото число, то се взема предивд и се продължава с мятането.
 Ако крайният резултат е <0, имаме епичен провал, честито!  \\
