[refactor] Commented out unfinished rules.

--- a/latex/rules/combat.tex
+++ b/latex/rules/combat.tex
@@ -49,9 +49,9 @@
 \end{abstractiontable}
 
 \begin{abstractiontable}{Отбрана}
-абсорбация               &                &                &                                                &  \\
-покритие                 & обща абсобация &                &                                                &  \\
-                         &                & отбрана        &                                                &  \\
+покритие като лук        & покритие - число &                &                                                &  \\
+пазене                   & пазене           &                &                                                &  \\
+                         &                  & отбрана        &                                                &  \\
 \end{abstractiontable}
 
 \begin{abstractiontable}{Ресурси}
@@ -69,10 +69,6 @@
 
 
 \section{Списък с правила}
-\subsection{Абсорбация}
-Свойството на броня да абсорбира част от сериозността на удар.
-
-
 \subsection{Автоматична стрелба}
 Автоматичните оръжия са способни да произведат повече от един изстрел за ход.
 Хвърлянето за атака е едно и броят изстрели се заявява предварително.
@@ -204,17 +200,24 @@
 обстрел = (боравене + средни Щ (+5 за автоматични оръжия)) / 2
 
 
-\subsection{Обща абсорбация}
-общо покритие = (покритие глава + покритие торс + покритие ръце + покритие крака) / 4
-\\
-обща абсорбация = (аб + общо покритие) / 2
+%\subsection{Обща абсорбация}
+%общо покритие = (покритие глава + покритие торс + покритие ръце + покритие крака) / 4
+%\\
+%обща абсорбация = (аб + общо покритие) / 2
 
 
-\subsection{Отбрана на строй}
-отбрана = (боравене + обща абсорбация)
+%\subsection{Отбрана на строй}
+%отбрана = (боравене + обща абсорбация)
+
+
+\subsection{Пазене}
+Свойството на броня да абсорбира част от сериозността на удар.
 
 
 \subsection{Покритие(на броня)}
+Всяко парче броня има асоцирано число 'покритие', описващо колко пълно покрива тялото.
+Най общо, хвърлянето за боравене на нападател трябва да надвие боравене + прикритие за да заобиколи бронята. 
+юю
 Парчета броня могат да бъдат носени заедно или едно под друго.
 \begin{itemize}
 \item{на главата може да бъде носен шлем върху бронирана качулка}
@@ -228,8 +231,9 @@
 \\
 \anexample{
 Нагръдник с покритие 5 върху ризница с покртитие 10.
+\\
 \rowcolors{1}{white}{lightgray}
-\begin{tabular}{ p{3cm} | p{3cm} | p{3cm} | p{3cm} | p{3cm} }
+\begin{tabular}{ p{8cm} | p{8cm} }
 боравене на нападателя + d* >= боравене на отбраняващият се + 10 & всичката броня е заобиколена  \\
 боравене на нападателя + d* >= боравене на отбраняващият се + 5  & нападението заобикаля нагръдника, но попада в ризницата  \\
 боравене на нападателя + d* >= боравене на отбраняващият се      & нападението попада в нагръдника, и ако той не го спре- в ризницата  \\
@@ -238,7 +242,7 @@
 \\
 От друга страна, някои парчета боня се носят заедно.
 \\
-\anexample{Ръкавици с покритие 4 и налакътници с покритие 3 представляват една броня за ръцете с покритие 7 и абсорбация средно аритметично от двете.}
+\anexample{Ръкавици с покритие 4 и налакътници с покритие 3 представляват една броня за ръцете с покритие 7 и пазене средно аритметично от двете.}
 
 
 \begin{multicols}{2}
@@ -309,7 +313,7 @@
 \subsection{Свойства на оръжие}
 \begin{itemize}
 \item{\textit{повратливост} - покрива всички по-близки дистанции от максимлната}
-\item{\textit{бронебойност} - пренебрегва половината абсорбацията на целта}
+\item{\textit{бронебойност} - пренебрегва половината пазене на целта}
 \item{\textit{трудно за вадене} - не може да се извади от пробита броня, щит или плът; при вадене лечитеслтво с/у щетите; ако не успее се  нанасят още толкова щети, колкото първоначално}
 \item{\textit{поваляне} - наместо щети оръжието спъва и поваля опонента, дори конник; качествено бойно седло дава -5 на атака}
 \item{\textit{обезоръжащи куки} - ако париране със съответния щит или оръжие надхвърли с 5 нападението, вражеското оръжие е хвърлено на земята}
