--- a/latex/fantasy/skills.tex
+++ b/latex/fantasy/skills.tex
@@ -1,21 +1,19 @@
 \chapter{Умения}
-Означените със звездичка умения са събирателни понятия.
-Например може да се избере \textit{елфически} език или оръжие \textit{брадва} или наука \textit{алхимия}.
 \section{Общуване}
 Лъжене (Харизма)                  \\
 Сплашване (Харизма)               \\
 Изтезаване/Разпитване (Харизма)   \\
 Емпатия (Харизма)                 \\
 Четене по устните (Харизма)       \\
-Молене (Харизма)                  \\
+Просене (Харизма)                  \\
 
 \section{Академични}
-Език* (Ум)                        \\
-Наука* (Ум)                       \\
+Език(Ум) - староендивалски, гоблински, северно върколажко кралство и т.н.  \\
+Наука(Ум) - алхимия, астрономия, геометрия, оптика и т.н.  \\
 Тактика (Ум)                      \\
 
 \section{Схватки}
-Оръжие* (Ловкост)                 \\
+Оръжие(Ловкост) - нож, меч, брадва, дълъг меч, лък и т.н.  \\
 Военна машина* (Ум)               \\
 
 \section{Придвижване}
@@ -29,15 +27,15 @@
 Изработка на лъкове(Л)            \\
 Тъкане, шиене и бродиране(Л)      \\
 
-\section{Епични провали}
-Ако при мятане на д6* се падне -5 или +6, се мята отново.
-Ако случайно се падне същото число, то се взема предивд и се продължава с мятането.
-Ако крайният резултат е <0, имаме епичен провал, честито!  \\
+%\section{Епични провали}
+%Ако при мятане на д6* се падне -5 или +6, се мята отново.
+%Ако случайно се падне същото число, то се взема предивд и се продължава с мятането.
+%Ако крайният резултат е <0, имаме епичен провал, честито!  \\
 
-При атака с оръжие           \\
-- да го изтърве              \\
-- да се сепъне               \\
-- да се наръга               \\
-- да се счупи                \\
-- да удари някого другиго    \\
-- ми нищо не се случва       \\
+%При атака с оръжие           \\
+%- да го изтърве              \\
+%- да се сепъне               \\
+%- да се наръга               \\
+%- да се счупи                \\
+%- да удари някого другиго    \\
+%- ми нищо не се случва       \\
