[rules] TODO: rename abstract item value!

--- a/latex/fantasy/items.tex
+++ b/latex/fantasy/items.tex
@@ -93,7 +93,7 @@ Some other figures: There will be one noble household per 200 population, one la
 колиба    & къща в малък град или село              & къща в голям град        & централна къща в столицата                 \\
           & магаре С30                              & боен кон                 &
 \end{tabular}
-
+% TODO: мн евтин - ежедневен; евтин - често срещан; среден - ценност; скъп - имане; много скъп - богатство
 
 \weapon{knife}{Нож, кама}{3-9}{близък (0.3м)}{ниски (//-2)}{-}{0.3кг}{много евтин}
 \weapon{gladius}{Гладиус}{4-10}{близък (0.8м)}{средни (/-2/-4)}{-}{0.8кг}{евтин}
