[items] Added more headings.

--- a/latex/rules/combat.tex
+++ b/latex/rules/combat.tex
@@ -312,7 +312,7 @@
 
 \subsection{Свойства на оръжие}
 \begin{itemize}
-\item{\textit{повратливост} - покрива всички по-близки дистанции от максимлната}
+\item{\textit{повратливост} - детайлно: покрива всички по-близки дистанции от максимлната; индивидуално: +1 боравене }
 \item{\textit{бронебойност} - пренебрегва половината пазене на целта}
 \item{\textit{трудно за вадене} - не може да се извади от пробита броня, щит или плът; при вадене лечитеслтво с/у щетите; ако не успее се  нанасят още толкова щети, колкото първоначално}
 \item{\textit{поваляне} - наместо щети оръжието спъва и поваля опонента, дори конник; качествено бойно седло дава -5 на атака}
