--- a/latex/fantasy/items.tex
+++ b/latex/fantasy/items.tex
@@ -95,31 +95,36 @@ Some other figures: There will be one noble household per 200 population, one la
 \end{tabular}
 % TODO: мн евтин - ежедневен; евтин - често срещан; среден - ценност; скъп - имане; много скъп - богатство
 
+\section{Оръжия}
+\subsection{Остриета}
 \weapon{knife}{Нож, кама}{3-9}{близък (0.3м)}{ниски (//-2)}{-}{0.3кг}{много евтин}
 \weapon{gladius}{Гладиус}{4-10}{близък (0.8м)}{средни (/-2/-4)}{-}{0.8кг}{евтин}
 \weapon{rapier}{Рапира}{4-10}{среден (1.2м)}{средни (+2/-4/0)}{-}{1кг}{среден}
 \weapon{sword}{Меч}{5-12}{среден (0.9м)}{средни (//-4)}{повратливост}{1.1кг}{евтин}
-\weapon{longsword}{Дълъг меч}{5-12}{дълъг (1,3м)}{високи (//-2)}{повратливост}{1.5кг}{среден}
-\weapon{estok}{Есток}{5-12}{дълъг (1,3м)}{средни (/-4/-4)}{бронебойност}{1.5кг}{среден}
-\weapon{zweihander}{Цвайхендер}{8-15}{дълъг (2.1м)}{високи (//-2)}{-}{3кг}{среден}
+\weapon{longsword}{Дълъг меч}{5-12}{дълъг (1,3м)}{високи (//-4)}{повратливост}{1.5кг}{среден}
+\weapon{estok}{Есток}{5-12}{дълъг (1,3м)}{средни (/0/-4)}{бронебойност}{1.5кг}{среден}
+\weapon{zweihander}{Цвайхендер}{8-15}{дълъг (2.1м)}{високи (//-4)}{-}{3кг}{среден}
 
-\weapon{small_falx}{Малък фалкс, боен сърп}{4-10}{среден (0.9м)}{средни/високи (-2/+1/-2)}{закача щит}{1кг}{евтин}
-\weapon{falx}{Фалкс}{5-12}{дълъг (1.5м)}{високи (-2/+1/-2)}{закача щит}{1.5кг}{евтин}
-
-\weapon{hand_axe}{Брадвичка}{5-12}{среден (0.8м)}{средни (-1/+1/-1)}{закача щит}{0.8кг}{евтин}
-\weapon{dane_axe}{Датска брадва}{5-12}{среден (1.2м)}{високи (+2/-2/-2)}{бронебойност}{1.5кг}{евтин}
+\subsection{Остриета на дръжка}
+\weapon{small_falx}{Малък фалкс, боен сърп}{4-10}{среден (0.9м)}{средни/високи (-2/+1/-4)}{закача щит}{1кг}{евтин}
+\weapon{falx}{Фалкс}{5-12}{дълъг (1.5м)}{високи (-2/+1/-4)}{закача щит}{1.5кг}{евтин}
+\weapon{hand_axe}{Брадвичка}{5-12}{среден (0.8м)}{средни (-2/+1/-2)}{закача щит}{0.8кг}{евтин}
+\weapon{dane_axe}{Датска брадва}{5-12}{среден (1.2м)}{високи (+2/-4/-2)}{бронебойност}{1.5кг}{евтин}
 \weapon{helbard}{Алебарда}{5-12}{дълъг (1.7м)}{високи (//)}{бронебойност, поваляне, закача щит}{2.2кг}{евтин}
-\weapon{pike}{Пика}{5-12}{отдалечен (7м)}{високи (/-4/-4)}{-}{5кг}{евтин}
+\weapon{pike}{Пика}{5-12}{отдалечен (7м)}{високи (/-6/-4)}{-}{5кг}{евтин}
 \weapon{glavie}{Глейв, нагината}{5-12}{дълъг (2.5м)}{високи (/-1/-2)}{бонус срещу щитове}{1кг}{евтин}
 
-\weapon{warhammer}{Боен чук}{5-12}{близък (0.8мм)}{ниски (/-1/-2)}{закача щит, бронебойност}{1кг}{евтин}
+\subsection{Трошащи}
+\weapon{warhammer}{Боен чук}{5-12}{близък (0.8мм)}{ниски (-4/0/)}{закача щит, бронебойност}{1кг}{евтин}
 \weapon{mace}{Боздуган}{5-12}{близък (0.6м)}{средни (-4/0/)}{бронебойност}{1кг}{евтин}
 
+\subsection{Метателни}
 \weapon{throwing_knife}{Нож за хвърляне}{3-9}{Сила/2}{ниски (/-4/-4)}{-}{0.2кг}{много евтин}
 \weapon{javelin}{Метателно копие}{5-12}{Сила}{високи (/0/0)}{-}{1кг}{много евтин}
 \weapon{pilum}{Пилум}{6-13}{Сила}{високи (/0/0)}{трудно за вадене}{1.2кг}{много евтин}
 \weapon{tomahawk}{Томахавка}{6-13}{Сила}{високи (/0/0)}{-}{0.7кг}{много евтин}
 
+\subsection{Стрелящи}
 \weapon{longbow}{Дълъг лък}{7, зарежда се 1 ход}{Сила*2}{високи (/0/0)}{-}{3кг}{много евтин}
 \weapon{arrow}{Бодкин стрела}{-}{+2}{-2}{бронебойност, трудно за вадене}{0.033кг}{много евтин}
 \weapon{arrow}{Широка стрела}{-}{-}{+2}{трудно за вадене}{0.033кг}{много евтин}
@@ -129,7 +134,9 @@ Some other figures: There will be one noble household per 200 population, one la
 \weapon{windlass_crossbow}{Арбалет с макара}{7 необходима, 12 реална, зарежда се 12 хода}{Сила*2}{високи (/0/0)}{-}{3кг}{среден}
 \weapon{bolt}{Болт}{-}{+2}{-2}{трудно за вадене}{0.033кг}{много евтин}
 
+\subsection{Щитове}
 \weapon{viking_shield}{Щит}{5-12}{близък (0.8/2м)}{ниски}{-}{3.5кг}{много евтин}
+
 
 \section{Брони}
 \subsection{Глава и шия}
@@ -167,6 +174,8 @@ Some other figures: There will be one noble household per 200 population, one la
 \subsubsection{Аксесоари}
 \armor{culet}{Кулет}{торс 1, крака 1}{5}{-}{2кг}{евтин}
 \armor{faulds}{Фаулд}{2}{5}{-}{2кг}{евтин}
+
+\subsection{Ръце}
 \armor{spaulder}{Спaлдери}{2}{5}{-}{2кг}{евтин}
 \armor{paudron}{Паудрони}{глава 1, торс 1, ръце 2}{5}{-}{5кг}{евтин}
 \armor{couter}{Налакътници}{1}{5}{-}{1кг}{евтин}
@@ -180,9 +189,9 @@ Some other figures: There will be one noble household per 200 population, one la
 \armor{laminar_vambrace}{Горен канон от пластини}{2}{5}{-}{1кг}{евтин}
 \armor{plate_vambrace}{Кован горен канон}{2}{7}{-}{3кг}{евтин}
 
-\subsection{Комплекти}
-\armor{full_plate_hands}{Пълна броня}{глава 7, торс 7, ръце 7, крака 7}{7}{-1 Ловкост}{20кг}{скъп}
-\armor{full_plate}{Пълна броня}{глава 7, торс 7, ръце 7, крака 7}{7}{-1 Ловкост}{20кг}{скъп}
+%\subsection{Комплекти}
+%\armor{full_plate_hands}{Пълна броня}{глава 7, торс 7, ръце 7, крака 7}{7}{-1 Ловкост}{20кг}{скъп}
+%\armor{full_plate}{Пълна броня}{глава 7, торс 7, ръце 7, крака 7}{7}{-1 Ловкост}{20кг}{скъп}
 
 
 
