[items] Included several buildings.

--- a/latex/preamble.tex
+++ b/latex/preamble.tex
@@ -76,3 +76,13 @@
 \end{multicols}
 \vspace{0.01cm}
 }
+
+\newcommand{\building}[3]
+{
+\begin{multicols}{2}
+  Име: #2  \\
+  Стойност: #3  \\
+  \includegraphics[height=0.3\textheight]{../images/#1}
+\end{multicols}
+}
+
