--- a/latex/fantasy/items.tex
+++ b/latex/fantasy/items.tex
@@ -83,17 +83,23 @@ Some other figures: There will be one noble household per 200 population, one la
 % This is a fine book by amateur historians, which includes some fascinating descriptions of medieval city life and layout.
 % <quoted>
 
-\section{Сгради}
-\rowcolors{1}{white}{lightgray}
-\begin{tabular}{p{3cm} | p{3cm} | p{3cm} | p{3cm} | p{3cm}}
-мн. евтин & евтин                                   & среден                   & скъп                           & мн. скъп  \\
-щит       & меч                                     & двуръчен меч             & имение                         & замък     \\
-брадва    & халчеста къса ризница                   & боен кон                 & пълна броня пазаене 15 здр. 15 &           \\
-куче      & кован нагръдник                         & качествена кираса и пола & качествена пълна броня         &           \\
-колиба    & къща в малък град или село              & къща в голям град        & централна къща в столицата                 \\
-          & магаре С30                              & боен кон                 &
-\end{tabular}
+%\rowcolors{1}{white}{lightgray}
+%\begin{tabular}{p{3cm} | p{3cm} | p{3cm} | p{3cm} | p{3cm}}
+%мн. евтин & евтин                                   & среден                   & скъп                           & мн. скъп  \\
+%щит       & меч                                     & двуръчен меч             & имение                         & замък     \\
+%брадва    & халчеста къса ризница                   & боен кон                 & пълна броня пазаене 15 здр. 15 &           \\
+%куче      & кован нагръдник                         & качествена кираса и пола & качествена пълна броня         &           \\
+%колиба    & къща в малък град или село              & къща в голям град        & централна къща в столицата                 \\
+%          & магаре С30                              & боен кон                 &
+%\end{tabular}
 % TODO: мн евтин - ежедневен; евтин - често срещан; среден - ценност; скъп - имане; много скъп - богатство
+
+
+\section{Сгради}
+\building{hut}{Колиба}{евтин}
+\building{merchant_house}{Къща}{среден}
+\building{tower}{Кула}{среден}
+
 
 \section{Оръжия}
 \subsection{Остриета}
