--- a/latex/fantasy/items.tex
+++ b/latex/fantasy/items.tex
@@ -83,16 +83,12 @@ Some other figures: There will be one noble household per 200 population, one la
 % This is a fine book by amateur historians, which includes some fascinating descriptions of medieval city life and layout.
 % <quoted>
 
-%\rowcolors{1}{white}{lightgray}
-%\begin{tabular}{p{3cm} | p{3cm} | p{3cm} | p{3cm} | p{3cm}}
-%мн. евтин & евтин                                   & среден                   & скъп                           & мн. скъп  \\
-%щит       & меч                                     & двуръчен меч             & имение                         & замък     \\
-%брадва    & халчеста къса ризница                   & боен кон                 & пълна броня пазаене 15 здр. 15 &           \\
-%куче      & кован нагръдник                         & качествена кираса и пола & качествена пълна броня         &           \\
-%колиба    & къща в малък град или село              & къща в голям град        & централна къща в столицата                 \\
-%          & магаре С30                              & боен кон                 &
-%\end{tabular}
-% TODO: мн евтин - ежедневен; евтин - често срещан; среден - ценност; скъп - имане; много скъп - богатство
+
+\section{Животни}
+\animal{dog}{Куче}{7}{евтин}
+\animal{donkey}{Магаре}{20}{евтин}
+\animal{cow}{Крава}{20}{евтин}
+\animal{horse}{Кон}{40}{среден}
 
 
 \section{Сгради}
@@ -115,10 +111,10 @@ Some other figures: There will be one noble household per 200 population, one la
 \weapon{small_falx}{Малък фалкс, боен сърп}{4-10}{среден (0.9м)}{средни/високи (-2/+1/-4)}{закача щит}{1кг}{евтин}
 \weapon{falx}{Фалкс}{5-12}{дълъг (1.5м)}{високи (-2/+1/-4)}{закача щит}{1.5кг}{евтин}
 \weapon{hand_axe}{Брадвичка}{5-12}{среден (0.8м)}{средни (-2/+1/-2)}{закача щит}{0.8кг}{евтин}
-\weapon{dane_axe}{Датска брадва}{5-12}{среден (1.2м)}{високи (+2/-4/-2)}{бронебойност}{1.5кг}{евтин}
+\weapon{dane_axe}{Датска брадва}{5-12}{среден (1.2м)}{високи (-4/+2/-2)}{бронебойност}{1.5кг}{евтин}
 \weapon{helbard}{Алебарда}{5-12}{дълъг (1.7м)}{високи (//)}{бронебойност, поваляне, закача щит}{2.2кг}{евтин}
-\weapon{pike}{Пика}{5-12}{отдалечен (7м)}{високи (/-6/-4)}{-}{5кг}{евтин}
-\weapon{glavie}{Глейв, нагината}{5-12}{дълъг (2.5м)}{високи (/-1/-2)}{бонус срещу щитове}{1кг}{евтин}
+\weapon{pike}{Пика}{5-12}{отдалечен (7м)}{средни (/-6/-4)}{-}{5кг}{евтин}
+\weapon{glavie}{Глейв, нагината}{5-12}{дълъг (2.5м)}{високи (/-1/-2)}{закача щит}{2кг}{евтин}
 
 \subsection{Трошащи}
 \weapon{warhammer}{Боен чук}{5-12}{близък (0.8мм)}{ниски (-4/0/)}{закача щит, бронебойност}{1кг}{евтин}
@@ -126,19 +122,18 @@ Some other figures: There will be one noble household per 200 population, one la
 
 \subsection{Метателни}
 \weapon{throwing_knife}{Нож за хвърляне}{3-9}{Сила/2}{ниски (/-4/-4)}{-}{0.2кг}{много евтин}
-\weapon{javelin}{Метателно копие}{5-12}{Сила}{високи (/0/0)}{-}{1кг}{много евтин}
-\weapon{pilum}{Пилум}{6-13}{Сила}{високи (/0/0)}{трудно за вадене}{1.2кг}{много евтин}
-\weapon{tomahawk}{Томахавка}{6-13}{Сила}{високи (/0/0)}{-}{0.7кг}{много евтин}
+\weapon{javelin}{Метателно копие}{5-12}{Сила}{средни (/0/0)}{-}{1кг}{много евтин}
+\weapon{pilum}{Пилум}{6-13}{Сила}{средни (/0/0)}{трудно за вадене}{1.2кг}{много евтин}
+\weapon{tomahawk}{Томахавка}{6-13}{Сила}{средни (-2//-2)}{-}{0.7кг}{много евтин}
 
 \subsection{Стрелящи}
-\weapon{longbow}{Дълъг лък}{7, зарежда се 1 ход}{Сила*2}{високи (/0/0)}{-}{3кг}{много евтин}
+\weapon{longbow}{Дълъг лък}{7, зарежда се 1 ход}{Сила*2}{средни (/0/0)}{-}{3кг}{много евтин}
 \weapon{arrow}{Бодкин стрела}{-}{+2}{-2}{бронебойност, трудно за вадене}{0.033кг}{много евтин}
 \weapon{arrow}{Широка стрела}{-}{-}{+2}{трудно за вадене}{0.033кг}{много евтин}
 
-\weapon{small_crossbow}{Малък арбалет}{7, зарежда се 2 хода}{Сила*2}{високи (/0/0)}{-}{3кг}{евтин}
-\weapon{lever_crossbow}{Арбалет}{7 необходима, 9 реална, зарежда се 6 хода}{Сила*2}{високи (/0/0)}{-}{3кг}{евтин}
-\weapon{windlass_crossbow}{Арбалет с макара}{7 необходима, 12 реална, зарежда се 12 хода}{Сила*2}{високи (/0/0)}{-}{3кг}{среден}
-\weapon{bolt}{Болт}{-}{+2}{-2}{трудно за вадене}{0.033кг}{много евтин}
+\weapon{small_crossbow}{Малък арбалет}{7, зарежда се 2 хода}{Сила*2}{средни (/0/0)}{-}{3кг}{евтин}
+\weapon{lever_crossbow}{Арбалет}{7 необходима, 9 реална, зарежда се 6 хода}{Сила*2}{средни (/0/0)}{-}{3кг}{евтин}
+\weapon{windlass_crossbow}{Арбалет с макара}{7 необходима, 12 реална, зарежда се 12 хода}{Сила*2}{средни (/0/0)}{-}{3кг}{среден}
 
 \subsection{Щитове}
 \weapon{viking_shield}{Щит}{5-12}{близък (0.8/2м)}{ниски}{-}{3.5кг}{много евтин}
