[fantasy] Added Languages section.

--- a/latex/elementaris-fantasy.tex
+++ b/latex/elementaris-fantasy.tex
@@ -14,6 +14,7 @@
 \input{fantasy/races}
 \input{fantasy/items}
 \input{fantasy/skills}
+\input{fantasy/languages}
 
 \input{rules/perks}
 \tableofcontents
