--- a/latex/preamble.tex
+++ b/latex/preamble.tex
@@ -28,6 +28,7 @@
 \usepackage{mdwlist}           % Compact lists via starred version e.g. enum*
 \usepackage{wrapfig}           % Make floats, such as figures and tables, inline e.g. \begin{wraptable}{l}{5.5cm}.
 \usepackage{enumitem}          % Customize enumerate, itemize, list.
+\usepackage{qtree}             % https://ctan.org/tex-archive/macros/latex/contrib/qtree/
 
 % Macros, declared in separate headers.
 \include{spell_template}
