--- a/latex/fantasy/languages.tex
+++ b/latex/fantasy/languages.tex
@@ -6,9 +6,8 @@
 \item{Спернт - изкуствен език, базиран на човешкия; лесен за учене; говорен в Добра надежда}
 \item{Дабарски - сищия този език, в оригиналната форма когато пристигнал на Ендивал}
 \item{Злотски - езикът на местното племе около Таури - родени търговци, премесен с Дабарски}
-\item{Латински - преоткрит по необходимост заради количеството книги, донесени с човешката инвазия}
 \end{itemize}
-\Tree[ .Дабарски [ .Терейски [ Спернт ] ] [ .Каланорски ] [ Злотски ] [ Латински ] ]
+\Tree[ .Дабарски [ .Терейски [ .Спернт ] ] [ .Каланорски ] [ .Злотски ] ]
 
 \section{Здрачнически езици}
 \begin{itemize}[topsep=-0cm, partopsep=0cm, parsep=0cm, itemsep=0cm]
@@ -17,7 +16,7 @@
 \item{Нов здрач - език изцяло със жестове}
 \item{Хаски - друг популярен търговски език}
 \end{itemize}
-\Tree[ .Староздрачнически [ .Здрач ] [ {Нов здрач} ] ]
+\Tree[ .Староздрачнически [ .Здрач [ .Хаски ] ] [ .{Нов здрач} ] ]
 
 \section{Върколашки езици}
 \begin{itemize}[topsep=-0cm, partopsep=0cm, parsep=0cm, itemsep=0cm]
@@ -31,7 +30,7 @@
 \item{Бурхски}
 \item{Третски - общ език между нежду наемници и други паравоенни организации из Ендивал}
 \end{itemize}
-\Tree[ .Старовърколашки [ .Старобурхски [ .Бурхски [ .Третски ] ] ] [ .Грефрамски [ .Фелтеарски ] [ .Лиднарски ] [ .Креолски ] [ Грефкраски ]  ] ]
+\Tree[ .Старовърколашки [ .Старобурхски [ .Бурхски [ .Третски ] ] ] [ .Грефрамски [ .Фелтеарски ] [ .Лиднарски ] [ .Креолски ] [ .Грефкраски ]  ] ]
 
 \section{Елфически езици}
 \begin{itemize}[topsep=-0cm, partopsep=0cm, parsep=0cm, itemsep=0cm]
@@ -51,3 +50,8 @@
 \item{Староджуджешки}
 \end{itemize}
 \Tree[ .Староджуджешки [ .Религиозен джуджешки ] [ .Голмхемрумхерски [ .Храфкромдретппелски ] [ .Грумдерхентлестонски ] [ .Краутнаумхески ] ] ]
+
+\section{Други езици}
+\begin{itemize}[topsep=-0cm, partopsep=0cm, parsep=0cm, itemsep=0cm]
+\item{Латински - преоткрит по необходимост заради количеството книги, донесени с човешката инвазия}
+\end{itemize}
