--- a/latex/fantasy/titlepage.tex
+++ b/latex/fantasy/titlepage.tex
@@ -4,13 +4,13 @@
 % Upper part of the page. The '~' is needed because \\
 % only works if a paragraph has stared.
 \textsc{\Huge Елементарис}\\[1.5cm]
-\includegraphics[width=0.85\textwidth]{../images/dragon}~
+\includegraphics[width=0.85\textwidth]{dragon}~
 \\[1cm]
 
 \vfill
 
 % Bottom of the page.
-\today
+\footnotesize \today \normalsize
 
 \end{center}
 \end{titlepage}
