--- a/latex/rules/combat.tex
+++ b/latex/rules/combat.tex
@@ -99,7 +99,7 @@
 Второто оръжие може да се ползва за създаване на откриване (което добавя половината боравене в това оръжие към боравенето с основното оръжие) или пък независимо, за пласиране на стопиращи удари (в който случай се ползва независимо, но с наказание -5 на атака).
 Ако се атакува само с едното оръжие няма наказания, разбира се.
 Щитовете не търпят -5 при пазене.
-\includegraphics[height=0.8\textheight]{../images/naginata}~
+\includegraphics[height=0.8\textheight]{naginata}~
 
 
 \subsection{Дистанция}
@@ -253,7 +253,7 @@
 След това целта може да бъде следена, запазвайки модификацията, докато нещо съществено се промени: влезе в автомобил, легне, затича се.
 
 
-\includegraphics[width=0.6\textwidth]{../images/siege}~
+\includegraphics[width=0.6\textwidth]{siege}~
 
 
 \subsection{Прикриване}
