[images] Manually downscaled images. Output decreased from 69MB to 17MB.

--- a/latex/fantasy/items.tex
+++ b/latex/fantasy/items.tex
@@ -128,8 +128,8 @@ Some other figures: There will be one noble household per 200 population, one la
 
 \subsection{Стрелящи}
 \weapon{longbow}{Дълъг лък}{7, зарежда се 1 ход}{Сила*2}{средни (/0/0)}{-}{3кг}{много евтин}
-\weapon{arrow}{Бодкин стрела}{-}{+2}{-2}{бронебойност, трудно за вадене}{0.033кг}{много евтин}
-\weapon{arrow}{Широка стрела}{-}{-}{+2}{трудно за вадене}{0.033кг}{много евтин}
+\weapon{bodkin_arrow}{Бодкин стрела}{-}{+2}{-2}{бронебойност, трудно за вадене}{0.033кг}{много евтин}
+\weapon{broadhead_arrow}{Широка стрела}{-}{-}{+2}{трудно за вадене}{0.033кг}{много евтин}
 
 \weapon{small_crossbow}{Малък арбалет}{7, зарежда се 2 хода}{Сила*2}{средни (/0/0)}{-}{3кг}{евтин}
 \weapon{lever_crossbow}{Арбалет}{7 необходима, 9 реална, зарежда се 6 хода}{Сила*2}{средни (/0/0)}{-}{3кг}{евтин}
