[files] Fewer files in latex/

--- a/latex/fantasy/languages.tex
+++ b/latex/fantasy/languages.tex
@@ -46,10 +46,10 @@
 \item{Голмхемрумхерски}
 \item{Грумдерхентлестонски}
 \item{Краунаумхески}
-\item{Религиозен джудежешки}
+\item{Църковен джудежешки}
 \item{Староджуджешки}
 \end{itemize}
-\Tree[ .Староджуджешки [ .Религиозен джуджешки ] [ .Голмхемрумхерски [ .Храфкромдретппелски ] [ .Грумдерхентлестонски ] [ .Краутнаумхески ] ] ]
+\Tree[ .Староджуджешки [ .{Църковен джуджешки} ] [ .Голмхемрумхерски [ .Храфкромдретппелски ] [ .Грумдерхентлестонски ] [ .Краутнаумхески ] ] ]
 
 \section{Други езици}
 \begin{itemize}[topsep=-0cm, partopsep=0cm, parsep=0cm, itemsep=0cm]
